@@ -7,6 +7,7 @@ Bugs fixed
 * Fix line numbers was not shown on warnings in LaTeX and texinfo builders
 * Fix filenames were not shown on warnings of citations
 * Fix line numbers was not shown on warnings in LaTeX and texinfo builders
+* Fix line numbers was not shown on warnings of indecies
 
 Release 1.3.4 (released Jan 12, 2016)
 =====================================
